--- a/frontend/index.html
+++ b/frontend/index.html
@@ -87,14 +87,14 @@
             id="accout-from"
             class="account-select"
           >
-            <option value="select">Select</option>
+            <option id="option-value" value="select">Select</option>
           </select>
         </div>
 
         <div class="account_select_box" id="to-box">
           <p class="account_select_p">To :</p>
           <select class="select_account" id="accout-to" class="account-select">
-            <option value="select">Select</option>
+            <option id="option-value" value="select">Select</option>
           </select>
         </div>
 
@@ -105,7 +105,7 @@
             id="accout-select"
             class="account-select"
           >
-            <option value="">Select</option>
+            <option id="option-value" value="">Select</option>
           </select>
         </div>
 
