--- a/frontend/index.html
+++ b/frontend/index.html
@@ -176,7 +176,7 @@
     </div>
     <script type="module" src="./js/helpers/Account.js"></script>
     <script type="module" src="./js/helpers/Category.js"></script>
-    <script src="./js/helpers/Common.js"></script>
+    <script type="module" src="./js/helpers/Common.js"></script>
     <script type="module" src="./js/helpers/Transaction.js"></script>
     <script type="module" src="./js/index.js"></script>
   </body>
