Added some style changes

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,7 +23,7 @@
     <div class="tracker_whole_box">
       <h1 class="tracker_header_h1">My tracker</h1>
       <form class="create_account" action="" id="add-accounts-form">
-        <p class="create_account_p">New Account :</p>
+        <h2 class="create_account_h2">New Account :</h2>
         <input
           class="create_account_input"
           type="text"
@@ -38,7 +38,7 @@
       </form>
 
       <div class="new_transaction">
-        New Transaction:
+        <h2 class="transaction_h2">New Transaction:</h2>
         <div id="radio-deposit">
           <label
             ><input
@@ -99,7 +99,7 @@
         </div>
 
         <div class="account_select_box" id="acc-box">
-          <p class="account_select_p">Account :</p>
+          <h2 class="account_select_h2">Account :</h2>
           <select
             class="select_account"
             id="accout-select"
@@ -111,7 +111,7 @@
 
         <div class="category_box">
           <div class="category_select">
-            <p class="category_select_p">Category :</p>
+            <h2 class="category_select_h2">Category :</h2>
             <select class="select_category" id="category-select">
               <option value="">Select</option>
               <option id="add-new-category" value="new">Add new...</option>
@@ -135,11 +135,11 @@
           </div>
         </div>
         <div class="description_box">
-          <p>Description :</p>
+          <h2 class="description_h2">Description :</h2>
           <input class="description_input" type="text" id="description-input" />
         </div>
         <div class="amount_box">
-          <p>Amount :</p>
+          <h2 class="amount_h2">Amount :</h2>
           <input class="amount_input" type="number" id="amount-input" />
         </div>
         <button class="transaction_btn" type="button" id="new-transaction-btn">
@@ -153,7 +153,7 @@
       </div>
 
       <div class="filter_account">
-        <p class="filter_account_p">Filter by account :</p>
+        <p class="filter_account_h2">Filter by account :</p>
         <select class="select_filter select_account" id="accounts-filter">
           <option value="all">All</option>
         </select>
